# politylink-common

./: .gitignore  README.md  pyproject.toml
docs/: dev.md
politylink/: graphql.py  idgen.py  utils.py
politylink/elasticsearch/: __init__.py  client.py  schema.py
politylink/graphql/: __init__.py  client.py  schema.py  schema.sh  utils.py
politylink/helpers/: __init__.py  abstract_finder.py  bill_finder.py  committee_finder.py  diet_finder.py  member_finder.py  minutes_finder.py
politylink/nlp/: keyphrase.py  stopwords.txt  stopwords_minutes.txt  stopwords_slothlib.txt  utils.py
politylink/utils/: bill.py  common.py
tests/: test_graphql.py  test_idgen.py  test_utils.py
tests/elasticsearch/: test_client.py  test_schema.py
tests/graphql/: test_client.py  test_utils.py
tests/helpers/: test_abstract_finder.py  test_bill_finder.py  test_committee_finder.py  test_diet_finder.py
tests/nlp/: test_keyphrase.py  test_utils.py
tests/utils/: test_bill.py  test_common.py
