[tool.poetry]
name = "politylink"
version = "0.1.59"
description = ""
readme = "README.md"
homepage = "https://politylink.jp"
authors = ["Mitsuki Usui"]

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1.0.5"
sgqlc = "^11.0"
kanjize = "^0.1.0"
elasticsearch = "^7.9.1"
nltk = "^3.5"
spacy = "^2.3.5"
ginza = "^4.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
